--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -1,10 +1,28 @@
-\documentclass{ees}
+\documentclass[tocstyle=none]{ees}
 
 \begin{document}
 
 \eesTitlePage
 
-\eesCriticalReport{}
+\eesCriticalReport{
+  –    & –    & \B1 has been written by Copyist Zelenka 1 and substantially
+                revised by Jan Dismas Zelenka.
+                Bars 60–75, 106–122, and 212–225 are entirely in Zelenka’s hand.
+                It is unclear whether the abbreviation “G:K:” on the title page
+                truly refers to Kolberer as the author.
+                Although the title page mentions two oboes ad libitum,
+                the manuscript does not indicate that oboes should play. \\
+  27   & A    & 1st \halfNote\ in \B1: g′4–g′4 \\
+  43   & S    & 5th \eighthNote\ in \B1: g′8 \\
+  53   & S ???
+  73   & T    & 5th to 7th \eighthNote\ in \B1:
+                \sharp c′8.–\sharp c′16–\sharp c′8 \\
+  91   & S+A ???
+  136f & org  & upper voice missing in \B1 \\
+  164  & A    & 3rd \quarterNote\ in \B1: \flat e′4 \\
+  232  & T    & 3rd \quarterNote\ in \B1: d′16–f′16–e′16–d′16 \\
+  241  & org  & last \eighthNote\ in \B1: \flat B8 \\
+}
 
 \eesToc{}
 
