--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -12,15 +12,35 @@
                 truly refers to Kolberer as the author.
                 Although the title page mentions two oboes ad libitum,
                 the manuscript does not indicate that oboes should play. \\
+  10   & vl 2 & 2nd \halfNote\ in \B1: \flat e″2 \\
   27   & A    & 1st \halfNote\ in \B1: g′4–g′4 \\
+  29   & vl 1 & 1st \halfNote\ in \B1: d″4–d″4 \\
+  31   & vla  & bar in \B1: g′4.–g′8–\flat b′4–a′4 \\
   43   & S    & 5th \eighthNote\ in \B1: g′8 \\
-  53   & S ???
+  52   & vl 2 & 1st \quarterNote\ missing in \B1 \\
+  53   & S    & 3rd \quarterNote\ in \B1: a′4 \\
+  67–70 & vl, vla & bars added by the editor \\
   73   & T    & 5th to 7th \eighthNote\ in \B1:
                 \sharp c′8.–\sharp c′16–\sharp c′8 \\
-  91   & S+A ???
+  90   & vl 2 & 2nd \wholeNoteDotted\ in \B1: g′2–a′1 \\
+  91   & A    & 1st \wholeNote\ in \B1: \flat e′1 \\
+  110  & vl   & last \halfNote\ in \B1: c″2 \\
+  124  & vl 2 & 2nd \quarterNote\ in \B1: e″4 \\
   136f & org  & upper voice missing in \B1 \\
+  138–140 & vla & bars in \B1: 3 × \wholeNoteRest \\
+  159  & S    & 1st \wholeNote\ in \B1: a′1 \\
   164  & A    & 3rd \quarterNote\ in \B1: \flat e′4 \\
+  189  & vl 1 & 5th \eighthNote\ in \B1: c″8 \\
+  189  & vl 2 & 4th/5th \eighthNote\ in \B1: \flat b′8–c″8 \\
+  198  & vl   & last \sixteenthNote\ in \B1: a′16 \\
+  206–208 & vl & Bars have been written by editor, since in \B1,
+                Zelenka wrote a new org voice,
+                but did not adjust the vl parts. \\
+  232  & vl   & 2nd \quarterNote\ in \B1: g″8–g″8 \\
+  232  & vla  & 2nd \quarterNote\ in \B1: e′8–e′8 \\
   232  & T    & 3rd \quarterNote\ in \B1: d′16–f′16–e′16–d′16 \\
+  235–254 & vl & Bars 235–237 have been crossed out by Zelenka, indicating
+                that vl should play unison with S and A until the end. \\
   241  & org  & last \eighthNote\ in \B1: \flat B8 \\
 }
 
